--- a/roles/tomcat/templates/server.xml
+++ b/roles/tomcat/templates/server.xml
@@ -1,7 +1,7 @@
 
 <?xml version="1.0" encoding="UTF-8"?>
 
-<Server port="${shutdown.port}" shutdown="SHUTDOWN">
+<Server port="${SHUTDOWN_PORT}" shutdown="SHUTDOWN">
   <Listener className="org.apache.catalina.startup.VersionLoggerListener" />
   <Listener className="org.apache.catalina.core.AprLifecycleListener" SSLEngine="on" />
   <Listener className="org.apache.catalina.core.JreMemoryLeakPreventionListener" />
@@ -16,10 +16,10 @@
               pathname="conf/tomcat-users.xml" />
   </GlobalNamingResources>
   <Service name="Catalina">
-    <Connector port="${http.port}" protocol="HTTP/1.1"
+    <Connector port="${HTTP_PORT}" protocol="HTTP/1.1"
                connectionTimeout="20000"
-               redirectPort="${ssl.port}" />
-    <Connector port="${ajp.port}" protocol="AJP/1.3" redirectPort="${ssl.port}" secretRequired="false"/>
+               redirectPort="${SSL_PORT}" />
+    <Connector port="${AJP_PORT}" protocol="AJP/1.3" redirectPort="${SSL_PORT}" secretRequired="false"/>
 
     <Engine name="Catalina" defaultHost="localhost">
       <Realm className="org.apache.catalina.realm.LockOutRealm">
