--- a/roles/tomcat/templates/tomcat.service.j2
+++ b/roles/tomcat/templates/tomcat.service.j2
@@ -5,18 +5,18 @@ After=syslog.target network.target
 [Service]
 Type=forking
 
-User=tomcat
-Group=tomcat
+User={{ remote_user }}
+Group={{ remote_user }}
 
 Environment=JAVA_HOME={{ JAVA_HOME }}
 Environment='JAVA_OPTS=-Djava.awt.headless=true'
 
-Environment=CATALINA_HOME=/usr/share/tomcat
-Environment=CATALINA_BASE=/usr/share/tomcat
-Environment=CATALINA_PID=/usr/share/tomcat/temp/tomcat.pid
+Environment=CATALINA_HOME={{ tomcat_dir }}
+Environment=CATALINA_BASE={{ tomcat_dir }}
+Environment=CATALINA_PID={{ tomcat_dir }}/temp/{{ instance }}.pid
 
-ExecStart=/usr/share/tomcat/bin/catalina.sh start
-ExecStop=/usr/share/tomcat/bin/catalina.sh stop
+ExecStart={{ tomcat_dir }}/bin/catalina.sh start
+ExecStop={{ tomcat_dir }}/bin/catalina.sh stop
 
 [Install]
 WantedBy=multi-user.target
